--- a/bab-stablesims/pyproject.toml
+++ b/bab-stablesims/pyproject.toml
@@ -10,6 +10,7 @@ cadcad = "^0.4.17"
 numpy = "^1.19.0"
 pandas = "^1.0.5"
 matplotlib = "^3.3.0"
+uuid = "^1.30"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
