--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ autohooks-plugin-black = "^1.2.0"
 
 [tool.autohooks]
 mode = "poetry"
-pre-commit = ["autohooks.plugins.pylint", "autohooks.plugins.black"]
+pre-commit = ["autohooks.plugins.black", "autohooks.plugins.pylint"]
 
 [build-system]
 requires = ["poetry>=0.12"]
