--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "^1.19.0"
 pandas = "^1.0.5"
 matplotlib = "^3.3.0"
 uuid = "^1.30"
+pycoingecko = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
