--- a/.pylintrc
+++ b/.pylintrc
@@ -142,7 +142,8 @@ disable=print-statement,
         comprehension-escape,
         too-many-arguments,
         too-many-locals,
-        duplicate-code
+        duplicate-code,
+        bad-continuation,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
