--- a/.pylintrc
+++ b/.pylintrc
@@ -144,6 +144,7 @@ disable=print-statement,
         too-many-locals,
         duplicate-code,
         bad-continuation,
+        too-many-statements
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
