--- a/.pylintrc
+++ b/.pylintrc
@@ -144,7 +144,10 @@ disable=print-statement,
         too-many-locals,
         duplicate-code,
         bad-continuation,
-        too-many-statements
+        too-many-statements,
+	invalid-name,
+	missing-function-docstring,
+	too-few-public-methods,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
