--- a/.pylintrc
+++ b/.pylintrc
@@ -147,6 +147,7 @@ disable=print-statement,
         too-many-statements,
 	invalid-name,
 	missing-function-docstring,
+	missing-class-docstring,
 	too-few-public-methods,
 
 # Enable the message, report, category or checker with the given id(s). You can
