--- a/demo-frontend/package.json
+++ b/demo-frontend/package.json
@@ -1,27 +1,26 @@
 {
-  "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.jsx\"",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\""
-  },
+  "name": "demo-frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
     "@chakra-ui/react": "^1.0.1",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
     "@snowpack/plugin-babel": "^2.1.4",
     "eslint": "^7.14.0",
-    "framer-motion": "^2.9.5",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "framer-motion": "^2.9.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.12.7",
-    "@snowpack/plugin-react-refresh": "^2.3.7",
-    "@snowpack/web-test-runner-plugin": "^0.1.4",
     "prettier": "^2.0.5",
-    "snowpack": "^2.17.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
@@ -43,6 +42,21 @@
     ],
     "*.+(json|css|md)": [
       "prettier --write"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
