--- a/demo-frontend/package.json
+++ b/demo-frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "victory": "^35.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
