graph poc working

--- a/demo-frontend/package.json
+++ b/demo-frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "victory": "^35.4.2"
+    "victory": "^35.4.2",
+    "socket.io-client": "=2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
