--- a/demo-frontend/package.json
+++ b/demo-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.1",
     "@chakra-ui/react": "^1.0.1",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
@@ -13,8 +14,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "victory": "^35.4.2",
-    "socket.io-client": "=2.3.1"
+    "socket.io-client": "=2.3.1",
+    "victory": "^35.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
