--- a/demo-frontend/.eslintrc.json
+++ b/demo-frontend/.eslintrc.json
@@ -31,6 +31,7 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": 0,
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "react/jsx-props-no-spreading": 0
   }
 }
