using file methods instead of just the contructor

--- a/.pylintrc
+++ b/.pylintrc
@@ -150,6 +150,7 @@ disable=print-statement,
         missing-class-docstring,
         too-few-public-methods,
         arguments-differ,
+        too-many-instance-attributes,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
