--- a/.pylintrc
+++ b/.pylintrc
@@ -151,6 +151,7 @@ disable=print-statement,
         too-few-public-methods,
         arguments-differ,
         too-many-instance-attributes,
+        too-many-branches,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
